--- a/app/tamanios/templates/tamanios/crear_tamanio.html
+++ b/app/tamanios/templates/tamanios/crear_tamanio.html
@@ -3,7 +3,7 @@
 {% block title %}Crear Tamaño{% endblock %}
 
 {% block content %}
-<h1 class="h3 my-4 text-underline">Crear un Nuevo Tamaño</h1>
+<h1 class="h3 my-4 text-underline">Crear un Nueva Presentacion</h1>
 
 <div class="card shadow-sm">
     <div class="card-body">
